[package]
name = "minikv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.2"
eyre = "0.6.12"
papaya = "0.1.8"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.12.1", features = ["v4"] }
